--- a/refs.bib
+++ b/refs.bib
@@ -1260,6 +1260,32 @@ archivePrefix = {arXiv},
   year={2021}
 }
 
+@article{desi2023sv,
+  title={XXXXXXX},
+  author={{DESI Collaboration in}},
+  journal={XXXX},
+  year={prep}
+}
+
+@ARTICLE{2011ApJ...737..103S,
+       author = {{Schlafly}, Edward F. and {Finkbeiner}, Douglas P.},
+        title = "{Measuring Reddening with Sloan Digital Sky Survey Stellar Spectra and Recalibrating SFD}",
+      journal = {\apj},
+     keywords = {dust, extinction, Galaxy: stellar content, ISM: clouds, Astrophysics - Galaxy Astrophysics},
+         year = 2011,
+        month = aug,
+       volume = {737},
+       number = {2},
+          eid = {103},
+        pages = {103},
+          doi = {10.1088/0004-637X/737/2/103},
+archivePrefix = {arXiv},
+       eprint = {1012.4804},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2011ApJ...737..103S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @article{philcox2022probing,
   title={Probing parity violation with the four-point correlation function of BOSS galaxies},
   author={Philcox, Oliver HE},
