--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -1,7 +1,9 @@
 \section{Introduction}
 \label{sec:introduction}
 
-Inflation is a widely accepted paradigm in modern cosmology that explains many important characteristics of our Universe. It predicts that the early Universe underwent a period of accelerated expansion, resulting in the observed homogeneity and isotropy of the Universe on large scales \citep[see, e.g.,][for a review]{weinberg2013observational}. After the period of inflation, the Universe entered a phase of reheating in which primordial perturbations were generated, setting the initial seeds for structure formation \citep{kofman1994reheating, bassett2006inflation, lyth2009primordial}. Although inflation is widely accepted as a convincing explanation, the characteristics of the field or fields that drive the inflationary expansion remain largely unknown in contemporary observational cosmology. While early studies of the cosmic microwave background (CMB) and large-scale structure (LSS) suggested that primordial fluctuations are both Gaussian and scale-invariant \citep{PhysRevD.69.103501, guth2005inflationary}, some alternative classes of inflationary models predict deviations from these predictions, including some levels of non-Gaussianities in the primordial gravitational field. Non-Gaussianities are a measure of the degree to which the distribution of matter in the Universe deviates from a Gaussian distribution, which would have important implications for our understanding of the early Universe and the formation of structure \citep[see, e.g.,][]{2010CQGra..27l4011D, Biagetti2019Galax...7...71B}. In its simplest form, primordial non-Gaussianity (PNG) depends on the local value of the primordial potential $\phi$ \citep{komatsu2001acoustic},
+Inflation is a widely accepted paradigm in modern cosmology that explains many important characteristics of our Universe. It predicts that the early Universe underwent a period of accelerated expansion, resulting in the observed homogeneity and isotropy of the Universe on large scales \citep[see, e.g.,][for a review]{weinberg2013observational}. After the period of inflation, the Universe entered a phase of reheating in which primordial perturbations were generated, setting the initial seeds for structure formation \citep{kofman1994reheating, bassett2006inflation, lyth2009primordial}. Although inflation is widely accepted as a convincing explanation, the characteristics of the field or fields that drive the inflationary expansion remain largely unknown in contemporary observational cosmology. While early studies of the cosmic microwave background (CMB) and large-scale structure (LSS) suggested that primordial fluctuations are both Gaussian and scale-invariant \citep{PhysRevD.69.103501, guth2005inflationary}, some alternative classes of inflationary models predict deviations from these predictions, including some levels of non-Gaussianities in the primordial gravitational field. Non-Gaussianities are a measure of the degree to which the distribution of matter in the Universe deviates from a Gaussian distribution, which would have important implications for our understanding of the early Universe and the formation of structure \citep[see, e.g.,][]{2010CQGra..27l4011D, Biagetti2019Galax...7...71B}.
+
+In its simplest form, primordial non-Gaussianity (PNG) depends on the local value of the primordial potential $\phi$ \citep{komatsu2001acoustic},
 \begin{equation}
  \Phi = \phi + \fnl [\phi^{2} - <\phi^{2}>],
 \end{equation}
@@ -13,7 +15,7 @@ The current tightest bound on $\fnl$ comes from Planck's bispectrum measurement 
 \fnl$ constraints from UV Luminosity Function. 
 
 
-Currently, the most precise constraints on $\fnl$ from LSS reach a level of $\sigma(\fnl) \sim 20-30$, with the majority of the constraining power coming from the two-point statistics that utilize the scale-dependent bias \citep{2019JCAP...09..010C, mueller2022primordial, 2022PhRvD.106d3506C, 2022arXiv220111518D}. However, further work is needed to fully harness the potential of the scale-dependent bias in constraining $\fnl$. Specifically, more simulation-based studies of halo-assembly bias are necessary to gain a better understanding of this uncertainty and to more accurately measure the value of $\fnl$ \citep{2020JCAP...12..013B, 2020JCAP...12..031B, 2022JCAP...11..013B, 2023JCAP...01..023L}. In addition to the theoretical challenges, measuring $\fnl$ with the scale-dependent bias effect is nonetheless incredibly challenging due to various observational systematic effects that modulate the galaxy power spectrum on large scales, where the primordial signal is sensitive. For instance, survey geometry mixes clustering power on different angular scales \citep{beutler2014clustering,wilson2017rapid}. Relativistic effects also generate PNG-like scale-dependent signatures on large scales, which interfere with measuring $\fnl$ with the scale-dependent bias effect \citep{wang2020}. Similarly, matter density fluctuations with wavelengths larger than survey size, known as super-sample modes, modulate the galaxy power spectrum \citep{castorina2020JCAP}. In a similar way, the peculiar motion of the observer can mimic a PNG-like scale-dependent signature through aberration, magnification and the Kaiser-Rocket effect, i.e., a systematic dipolar apparent blue-shifting in the direction of the observer's peculiar motion \citep{2021JCAP...11..027B}. However, acting radially, this effect is subdominant in angular clustering measurements. An additional potential cause of systematic error arises from the fact that the mean galaxy density used to construct the density contrast field is estimated from the available data, rather than being known a priori. This introduces what is known as an integral constraint effect, which can cause the power spectrum on modes near the size of the survey to be artificially suppressed, effectively pushing it towards zero \citep{peacock1991large,de2019integral}. Accounting for these theoretical systematic effects in the galaxy power spectrum is crucial to obtain unbiased inference \citep[see, e.g.,][]{riquelme2022primordial}. 
+Currently, the most precise constraints on $\fnl$ from LSS reach a level of $\sigma(\fnl) \sim 20-30$, with the majority of the constraining power coming from the two-point statistics that utilize the scale-dependent bias \citep{2019JCAP...09..010C, mueller2022primordial, 2022PhRvD.106d3506C, 2022arXiv220111518D}. However, further work is needed to fully harness the potential of the scale-dependent bias in constraining $\fnl$. Specifically, more simulation-based studies of halo-assembly bias are necessary to properly model the galaxy power spectrum in the presence of local PNG \citep{2020JCAP...12..013B, 2020JCAP...12..031B, 2022JCAP...11..013B, 2023JCAP...01..023L}. In addition to the theoretical challenges, measuring $\fnl$ with the scale-dependent bias effect is nonetheless incredibly challenging due to various observational systematic effects that modulate the galaxy power spectrum on large scales, where the primordial signal is sensitive. For instance, survey geometry mixes clustering power on different angular scales \citep{beutler2014clustering,wilson2017rapid}. Relativistic effects also generate PNG-like scale-dependent signatures on large scales, which interfere with measuring $\fnl$ with the scale-dependent bias effect \citep{wang2020}. Similarly, matter density fluctuations with wavelengths larger than survey size, known as super-sample modes, modulate the galaxy power spectrum \citep{castorina2020JCAP}. In a similar way, the peculiar motion of the observer can mimic a PNG-like scale-dependent signature through aberration, magnification and the Kaiser-Rocket effect, i.e., a systematic dipolar apparent blue-shifting in the direction of the observer's peculiar motion \citep{2021JCAP...11..027B}. However, acting radially, this effect is subdominant in angular clustering measurements. An additional potential cause of systematic error arises from the fact that the mean galaxy density used to construct the density contrast field is estimated from the available data, rather than being known a priori. This introduces what is known as an integral constraint effect, which can cause the power spectrum on modes near the size of the survey to be artificially suppressed, effectively pushing it towards zero \citep{peacock1991large,de2019integral}. Accounting for these theoretical systematic effects in the galaxy power spectrum is crucial to obtain unbiased inference \citep[see, e.g.,][]{riquelme2022primordial}. 
 
 Other observational systematics are driven by varying imaging conditions across the sky \citep{ross2011} and photometric calibration issues in data reduction that appear as spurious fluctuations in the observed density field of galaxies \citep{huterer2013calibration}. Compared to the integral constraint and survey geometry effects, this particular type of systematic error is much more complex to deal with, and has proven to be a significant obstacle in past efforts to study local primordial non-Gaussianity using the scale-dependent bias \citep[see, e.g.,][]{pullen2013systematic, Ho2015JCAP...05..040H}. It is anticipated that imaging systematic errors will be particularly problematic for wide-area galaxy surveys that observe regions of the night sky closer to the Galactic plane and that seek to incorporate more lenient selection criteria in order to include fainter galaxies \citep[see, e.g,][]{kitanidis2020imaging}. As an ongoing wide-area galaxy survey, the Dark Energy Spectroscopic Instrument (DESI) uses $5000$ robotically-driven fibers to simultaneously collect spectra. DESI is designed to deliver an unparalleled volume of spectroscopic data over its five year mission that promises to deepen our understanding of the equation of state for dark energy \citep{aghamousa2016desi}. If systematic errors can be effectively controlled, DESI has the potential to offer competitive constraints on local PNG, with an anticipated precision of $\sigma(\fnl)=5$ \citep{aghamousa2016desi}. By combining DESI data with those of other forthcoming surveys, such as the Rubin Observatory and SphereX, it may be possible to achieve an unparalleled level of precision, potentially reaching $\sigma (\fnl) \sim 1$. \citep[see, e.g.,][]{Heinrich2022AAS...24020203H}.
  
