--- a/sections/methodology.tex
+++ b/sections/methodology.tex
@@ -10,12 +10,12 @@ by decomposing it into spherical harmonics, $Y_{\ell m}$,
 \begin{equation}
         a_{\ell m} = \int d\Omega ~ \delta_{g} W Y^{*}_{\ell m}.
 \end{equation}
-The mean galaxy density $\overline{\rho}$ is estimated from the entire LRG sample\footnote{The mean galaxy density is calculated separately for each region when we fit the power spectrum from each region individually.} and the survey window $W$ is determined from the number of randoms normalized by the expected number of randoms. The angular power spectrum is estimated by
+The mean galaxy density $\overline{\rho}$ is estimated from the entire LRG sample\footnote{The mean galaxy density is calculated separately for each region when we fit the power spectrum from each region individually.} and the survey window $W$ is determined from the number of randoms relative to the expected density of $6000$ randoms per square degrees. Then, the angular power spectrum is estimated by
 \begin{equation}\label{eq:pusedocell}
         \tilde{C}_{\ell} = \frac{1}{2\ell +1} \sum_{m=-\ell}^{\ell} |a_{\ell m}|^{2}.
 \end{equation}
 
-We use the implementation of \texttt{anafast} from the \textsc{HEALPix} package \citep{gorski2005healpix} to do fast harmonic transforms and estimate the pseudo angular power spectrum and cross power spectrum. When the sky coverage of a survey is incomplete, this estimator yields biased power spectrum. Specifically, the survey mask causes correlations between different harmonic modes and results in the measured power on scales near the survey size being pushed towards zero. Since these scales are highly sensitive to local primordial non-Gaussianity, it is crucial to account for these systematic effects in the model galaxy power spectrum to obtain unbiased $\fnl$ constraints.
+We use the implementation of \texttt{anafast} from the \textsc{HEALPix} package \citep{gorski2005healpix} to do fast harmonic transforms and estimate the pseudo angular power spectrum and cross power spectrum. When the sky coverage of a survey is incomplete, this estimator yields a biased power spectrum. Specifically, the survey mask causes correlations between different harmonic modes and results in the measured power on scales near the survey size being pushed towards zero. Since these scales are highly sensitive to local primordial non-Gaussianity, it is crucial to account for these systematic effects in the model galaxy power spectrum to obtain unbiased $\fnl$ constraints.
 
  \subsection{Modeling}
 
@@ -34,17 +34,16 @@ where $b$ is the linear bias (dashed curve in Figure \ref{fig:nz}), $D$ represen
 \Delta b = b_{\phi}(z) \fnl \frac{3 \Omega_{m} H^{2}_{0}}{2 k^{2}T(k)D(z) c^{2}} \frac{g(\infty)}{g(0)},
 \label{eq:scaledepbias}
 \end{equation}
-where $\Omega_{m}$ is the matter density, $H_{0}$ is the Hubble constant\footnote{$H_{0}=100~({\rm km}~{\rm s}^{-1})/(h^{-1}{\rm Mpc})$ and $k$ is in unit of $h {\rm Mpc}^{-1}$}, $T(k)$ is the transfer function, and $g(\infty)/g(0) \sim 1.3$ with $g(z)\equiv (1+z) D(z)$ is the growth suppression due to non-zero $\Lambda$ and induced by our normalization of $D$ \citep[see, e.g.,][]{2010JCAP...07..013R, 2019MNRAS.485.4160M}. The bias parameter $b_{\phi}$ describes the response of galaxy formation to primordial potential perturbations in the presence of local PNG. Assuming that only mass determines the halo occupation function, $b_{\phi} = 2 \delta_{c}(b - p)$, where $p=1$ and $\delta_{c}= 1.686$ is the critical density for spherical collapse \citep{fillmore1984self}. The theoretical uncertainty on $p$ is not very well constrained, and \cite{2022JCAP...11..013B} showed that marginalizing over this parameter even with wide priors leads to biased $\fnl$ constraints because of parameter space projection effects. \cite{2023JCAP...01..023L} used N-body simulations to investigate secondary halo properties, such as concentration, spin and sphericity of haloes, and found that halo spin and sphericity preserve the universality of the halo occupation function while halo concentration significantly alters the halo function. Without better-informed priors on $p$, it is argued that the scale-dependent bias effect can only  be used to constrain the $b_{\phi}\fnl$ term \citep[see, e.g.,][]{2020JCAP...12..013B, 2020JCAP...12..031B}. However, the detection significance of local PNG remains unaffected by various assumptions regarding $p$. This means that a nonzero detection of $b_{\phi}\fnl$ at a certain confidence level will still indicate a nonzero detection of $\fnl$ at that same confidence level. This paper is focused on how a careful assessment of imaging systematic effects, or lack thereof, can bias our PNG constraints. Therefore, we choose $p=1$ for our sample of DESI LRG targets \citep[see, also,][]{slosar2008constraints,2010JCAP...07..013R,2013MNRAS.428.1116R}.
-
+where $\Omega_{m}$ is the matter density, $H_{0}$ is the Hubble constant\footnote{$H_{0}=100~({\rm km}~{\rm s}^{-1})/(h^{-1}{\rm Mpc})$ and $k$ is in unit of $h {\rm Mpc}^{-1}$}, $T(k)$ is the transfer function, and $g(\infty)/g(0) \sim 1.3$ with $g(z)\equiv (1+z) D(z)$ is the growth suppression due to non-zero $\Lambda$ and induced by our normalization of $D$ \citep[see, e.g.,][]{2010JCAP...07..013R, 2019MNRAS.485.4160M}. The bias parameter $b_{\phi}$ describes the response of galaxy formation to primordial potential perturbations in the presence of local PNG. Assuming that only mass determines the halo occupation function, $b_{\phi} = 2 \delta_{c}(b - p)$, where $p=1$ and $\delta_{c}= 1.686$ is the critical density for spherical collapse \citep{fillmore1984self}. The theoretical uncertainty on $p$ is not very well constrained, and \cite{2022JCAP...11..013B} showed that marginalizing over this parameter even with wide priors leads to biased $\fnl$ constraints because of parameter space projection effects. \cite{2023JCAP...01..023L} used N-body simulations to investigate secondary halo properties, such as concentration, spin and sphericity of haloes, and found that halo spin and sphericity preserve the universality of the halo occupation function while halo concentration significantly alters the halo function. Without better-informed priors on $p$, it is argued that the scale-dependent bias effect can only  be used to constrain the $b_{\phi}\fnl$ term \citep[see, e.g.,][]{2020JCAP...12..013B, 2020JCAP...12..031B}. However, the detection significance of local PNG remains unaffected by various assumptions regarding $p$. This means that a nonzero detection of $b_{\phi}\fnl$ at a certain confidence level will still indicate a nonzero detection of $\fnl$ at that same confidence level. This paper is focused on how a careful assessment of imaging systematic effects, or lack thereof, can bias our PNG constraints. Therefore, we choose $p=1$ for our sample of DESI LRG targets \citep[see, also,][]{slosar2008constraints,2010JCAP...07..013R,2013MNRAS.428.1116R}, and do not marginalize over $p$ to avoid projection effects \citep{2022JCAP...11..013B}.
 
 \subsubsection{Survey geometry and integral constraint}
 The ensemble average for the partial sky power spectrum is related to that of the full sky power spectrum via a mode-mode coupling matrix, $M_{\ell \ell^{\prime}}$,
 \begin{equation}\label{eq:mixm}
     <\tilde{C}_{\ell}> = \sum_{\ell^{\prime}} M_{\ell \ell^{\prime}}<C_{\ell^{\prime}}>.
 \end{equation}
-In general, $M_{\ell \ell^{\prime}}$ is singular for a large footprint, but a common technique to remedy this issue is to use a discrete set of $\ell$ bins and assume that the angular power spectrum is constant in each bin. We follow a similar approach to \cite{chon2004fast} to do the convolution in Equation \ref{eq:mixm}. The theoretical galaxy power spectrum $C_{\ell}$ is convolved with the survey mask power spectrum to obtain the expected pseudo-power spectrum. The convolution in the spherical harmonics space becomes a multiplication in the correlation function space. First, we estimate the survey mask correlation function, $\hat{\omega}^{\rm mask}$, and multiply that by the model correlation function, $\hat{\omega}^{\rm model}$. Then, the model pseudo-power spectrum is given by
+In general, $M_{\ell \ell^{\prime}}$ is singular for a large footprint, but a common technique to remedy this issue is to use a discrete set of $\ell$ bins and assume that the angular power spectrum is constant in each bin. We follow a similar approach to \cite{chon2004fast} to do the convolution in Equation \ref{eq:mixm}. The theoretical galaxy power spectrum $C_{\ell}$ is convolved with the survey mask power spectrum to obtain the expected pseudo-power spectrum. The convolution in the spherical harmonics space becomes a multiplication in the correlation function space. First, we estimate the survey mask correlation function, $\hat{\omega}^{\rm window}$, and multiply that by the model correlation function, $\hat{\omega}^{\rm model}$. Then, the model pseudo-power spectrum is given by
 \begin{align}
-    \tilde{C}^{\rm model}_{\ell} &= 2\pi \int \hat{\omega}^{\rm model}\hat{\omega}^{\rm mask}~P_{\ell}(\cos \theta) d\theta.
+    \tilde{C}^{\rm model}_{\ell} &= 2\pi \int \hat{\omega}^{\rm model}\hat{\omega}^{\rm window}~P_{\ell}(\cos \theta) d\theta.
 \end{align}
 
  \begin{figure}
@@ -55,9 +54,9 @@ In general, $M_{\ell \ell^{\prime}}$ is singular for a large footprint, but a co
 
 The integral constraint is another systematic effect which is induced because the mean galaxy density is estimated from the observed galaxy density. The estimate of the mean density is biased by the limited sky coverage. This issue was first raised in \cite{peacock1991large}. To account for the integral constraint, the survey mask power spectrum is used to introduce a scale-dependent correction factor that needs to be subtracted from the power spectrum. Finally, the pseudo power spectrum with the integral constraint correction is obtained as
 \begin{equation}
-     \tilde{C}^{\rm model, IC}_{\ell} = \tilde{C}^{\rm model}_{\ell} - \tilde{C}^{\rm model}_{\ell=0} \left(\frac{\tilde{C}^{\rm window}_{\ell}}{\tilde{C}^{\rm window}_{\ell=0}}\right).
+     \tilde{C}^{\rm model, IC}_{\ell} = \tilde{C}^{\rm model}_{\ell} - \tilde{C}^{\rm model}_{\ell=0} \left(\frac{\tilde{C}^{\rm window}_{\ell}}{\tilde{C}^{\rm window}_{\ell=0}}\right),
 \end{equation}
-
+where $\tilde{C}^{\rm window}$ is the spherical harmonic transform of $\hat{\omega}^{\rm window}$.
 
 The lognormal simulations are used to validate our survey window and integral constraint correction. Figure \ref{fig:model_mock} shows the mean power spectrum of the $\fnl=0$ simulations (dashed) and the best fit theory prediction before and after accounting for the survey mask and integral constraint. The simulations are neither contaminated nor mitigated. The light and dark shades represent the 68\% estimated error on the mean and one single realization, respectively. The DESI mask is applied to the simulations, which covers around $40\%$ of the sky. We find that the survey window effect affects the clustering power on $\ell < 200$ and the integral constraint modulates the clustering power on $\ell < 6$.
 
@@ -70,11 +69,11 @@ With the lognormal simulations, we find that the distribution of the power spect
 \end{equation}
 where $\Theta$ represents a container for the parameters $\fnl$, $b$, and $N_{\rm shot}$; $\tilde{C}(\Theta)$ is the (binned) expected pseudo-power spectrum; $\tilde{C}$ is the (binned) measured pseudo-power spectrum; and $\mathbb{C}$ is the covariance matrix constructed from the lognormal simulations. Flat priors are implemented for all parameters.
 
-\begin{figure}
+\begin{figure*}
 \centering
-\includegraphics[width=0.45\textwidth]{hist_cl.pdf}
+\includegraphics[width=0.85\textwidth]{hist_cl.pdf}
 \caption{The distribution of the first bin power spectra and its log transformation from the simulations with $\fnl=0$ (left) and $76.92$ (right). The log transformation alleviates the asymmetry in the distributions.}\label{fig:histcell}
-\end{figure}
+\end{figure*}
 
 
 \subsection{Characterization of remaining systematics}
@@ -121,7 +120,7 @@ where the covariance matrix $\mathbb{C}_{X} = < \tilde{C}_{X, \ell} \tilde{C}_{X
 
 Figure \ref{fig:clxmock} shows $\tilde{C}_{X}$ from the DR9 LRG sample before and after applying various corrections for imaging systematics. The dark and light shades show the 97.5$^{\rm th}$ percentile from the $\fnl=0$ and $76.9$ mocks, respectively. The LRG sample has the highest cross-correlations against extinction, stellar density, and the z-band depth (solid black curve). As the most conservative cleaning approach, a linear model is trained with the extinction and z-band depth maps (\textit{linear two maps}) to derive the imaging systematic weights. With the correction applied, we find that the cross power spectrum against the r-band psfsize increases (dot-dashed blue curve), which indicates that only extinction and depth in the z-band are not sufficient to regress out all of the residual cross correlations between the LRG density and imaging. With the linear model re-trained using the three maps (\textit{linear three maps}), we are able to reduce the cross power spectra (dotted orange curve). For comparison, we also show the cross spectra for a case in which the DR9 is cleaned using the linear model trained with all imaging systematic maps (dashed red curve). There are minor differences between the \textit{linear three maps} and \textit{linear eight maps} cross spectra, further supporting the idea that only three imaging systematic maps are sufficient to regress out spurious correlations.
 
-Figure \ref{fig:chi2test} (top) \bbk{[Figure 7 hasn't been discussed yet]} shows the histogram of the cross spectrum $\chi^{2}$ from 1000 mocks with and without $\fnl$. The $\chi^{2}$ values observed in the DR9 LRG sample are quoted for comparison. Before cleaning, our LRG sample has a cross power spectrum $\chi^{2}$ error of $20014.8$. After correction with the linear two maps approach, the cross spectrum $\chi^{2}$ is reduced to $375.1$ with p-value $=0.002$. Adding the r-band psfsize, the linear model reduces the $\chi^{2}$ down to $195.9$ with p-value $=0.044$; we can reject the null hypothesis that the DR9 sample with the linear three maps is properly cleaned at $95\%$ confidence. Even though training the linear model with all imaging systematic maps as input gives the lowest cross spectrum $\chi^{2}$ of $129.2$ (and p-value $=0.239$), but it potentially makes the analysis more prone to over-fitting and regressing out the true clustering signal, given the inner correlations among the imaging properties (Figure \ref{fig:pcc}). As an alternative, we apply the imaging weights from the nonlinear method with the extinction, z-band depth, and r-band psfsize maps (\textit{nonlinear three maps}). The cross power spectrum $\chi^{2}$ is reduced to $79.3$ with p-value $=0.594$.  Adding the stellar density map reduces the cross power spectrum $\chi^{2}$ error to $70.9$ (p-value $=0.687$). Our cross power spectrum diagnostic supports the idea that a nonlinear cleaning approach is needed to properly regress out the remaining spurious fluctuations. We investigate the test with the cross power spectrum up to higher multipoles but find no evidence of remaining systematic errors (see Appendix \ref{sec:scalesys}). 
+Figure \ref{fig:chi2test} (top) \bbk{[Figure 7 hasn't been discussed yet]} shows the histogram of the cross spectrum $\chi^{2}$ from 1000 mocks with and without $\fnl$. The $\chi^{2}$ values observed in the DR9 LRG sample are quoted for comparison. Before cleaning, our LRG sample has a cross power spectrum $\chi^{2}$ error of $20014.8$. After correction with the linear two maps approach, the cross spectrum $\chi^{2}$ is reduced to $375.1$ with p-value $=0.002$. Adding the r-band psfsize, the linear model reduces the $\chi^{2}$ down to $195.9$ with p-value $=0.044$; we can reject the null hypothesis that the DR9 sample with the linear three maps is properly cleaned at $95\%$ confidence. Even though training the linear model with all imaging systematic maps as input gives the lowest cross spectrum $\chi^{2}$ of $129.2$ (and p-value $=0.239$), it potentially makes the analysis more prone to over-fitting and regressing out the true clustering signal, given the inner correlations among the imaging properties (Figure \ref{fig:pcc}). As an alternative, we apply the imaging weights from the nonlinear method with the extinction, z-band depth, and r-band psfsize maps (\textit{nonlinear three maps}). The cross power spectrum $\chi^{2}$ is reduced to $79.3$ with p-value $=0.594$.  Adding the stellar density map reduces the cross power spectrum $\chi^{2}$ error to $70.9$ (p-value $=0.687$). Our cross power spectrum diagnostic supports the idea that a nonlinear cleaning approach is needed to properly regress out the remaining spurious fluctuations. We investigate the test with the cross power spectrum up to higher multipoles but find no evidence of remaining systematic errors (see Appendix \ref{sec:scalesys}). 
 
 \subsubsection{Mean density contrast}
 We calculate the histogram of the mean density contrast relative to the $j^{\rm th}$ imaging property:
@@ -138,13 +137,13 @@ and the total residual error as,
 \end{equation}
 where the covariance matrix $\mathbb{C}_{\delta} = < \delta_{X} \delta_{X}>$ is constructed from the lognormal mocks. Figure \ref{fig:nbarmock} shows the mean density contrast against the imaging properties for the DR9 LRG sample. The dark and light shades represent the $1\sigma$ level fluctuations observed in 1000 lognormal density fields respectively with $\fnl=0$ and $76.92$. The DR9 LRG sample before treatment (solid curve) exhibits a strong trend around $10\%$ against the z-band depth which is consistent with the cross power spectrum. Additionally, there are significant spurious trends against extinction and stellar density at about $5-6\%$. The linear approach is able to mitigate most of the systematic fluctuations with only extinction and depth in the z-band as input; however,  a new trend appears against the r-band psfsize map with the \textit{linear two maps} approach (dot-dashed blue curve), which is indicative of the psfsize-related systematics in our sample. This finding is in agreement with the cross power spectrum. We re-train the linear model with three maps, but we still observe around $2\%$ residual spurious fluctuations in the low end of the z-band depth, which implies nonlinear systematic effects exist. We find that the imaging weights from the nonlinear model trained with the three identified maps (or four maps including the stellar density) is capable of reducing the fluctuations below $2\%$. We experiment with different binning schemes but find consistent results.
 
-Figure \ref{fig:chi2test} (bottom) shows the mean density $\chi^{2}$ observed in the mocks with or without $\fnl$. We find consistent results regardless of the underlying $\fnl$, which supports that our diagnostic is not sensitive to the fiducial cosmology. The values measured in the DR9 LRG sample before and after applying imaging weights are quoted for comparison. The \textit{linear two maps} weights reduce the $\chi^{2}$ value from $679.8$ (before correction) to $178.8$. The p-value $=0$ indicates severe remaining systematic effects. Adding the r-band psfsize does not reduce the p-value enough (e.g., greater than $0.05$) even though the cleaning method yields a lower $\chi^{2}=130$. Training the linear model with all imaging systematic maps returns a more reasonable $\chi^{2}=90$ and p-value of $0.084$; however, regression with all imaging systematic maps as input can lead to the removal of the true clustering signal. With the imaging weights from the \textit{nonlinear three maps} approach, we obtain a $\chi^{2}$ value of $74.3$ with p-value $=0.392$. Re-training the nonlinear approach while adding the stellar density map (\textit{nonlinear four maps}) yields minor improvement: $\chi^{2}=73.2$ and p-value $=0.422$.  This indicates that the stellar density trend in the mean LRG density can be explained via the extinction map.
+Figure \ref{fig:chi2test} (bottom) shows the mean density $\chi^{2}$ observed in the mocks with or without $\fnl$. We find consistent results regardless of the underlying $\fnl$, which supports that our diagnostic is not sensitive to the fiducial cosmology. The values measured in the DR9 LRG sample before and after applying imaging weights are quoted for comparison. The \textit{linear two maps} weights reduce the $\chi^{2}$ value from $679.8$ (before correction) to $178.8$. The p-value $=0$ indicates severe remaining systematic effects. Adding the r-band psfsize does not reduce the p-value enough (e.g., greater than $0.05$) even though the cleaning method yields a lower $\chi^{2}=130$. Training the linear model with all imaging systematic maps returns a more reasonable $\chi^{2}=90$ and p-value of $0.084$. However, regression with all imaging systematic maps as input can lead to the removal of the true clustering signal. With the imaging weights from the \textit{nonlinear three maps} approach, we obtain a $\chi^{2}$ value of $74.3$ with p-value $=0.392$. Re-training the nonlinear approach while adding the stellar density map (\textit{nonlinear four maps}) yields minor improvement: $\chi^{2}=73.2$ and p-value $=0.422$.  This indicates that the stellar density trend in the mean LRG density can be explained via the extinction map.
 
 
 
 
 \subsection{Calibration of mitigation bias}\label{ssec:calibration}
-The template-based mitigation of imaging systematics removes some of the true clustering signal, and the amount of the removed signal increases as more maps are fed to the regression. Supported by our remaining systematic test, \textit{nonlinear three maps} is therefore chosen as our default approach, and is applied to the mocks (with and without contaminations) to calibrate the $\fnl$ biases induced by over correction. Below we describe an approach for the calibration and de-biasing of our $\fnl$ constraints. 
+The template-based mitigation of imaging systematics removes some of the true clustering signal, and the amount of the removed signal increases as more maps are fed to the regression. Supported by our remaining systematic test, \textit{nonlinear three maps} is therefore chosen as our default approach and is applied to the mocks (with and without contaminations) to calibrate the $\fnl$ biases induced by over-correction. Below we describe an approach for the calibration and de-biasing of our $\fnl$ constraints. 
 
 \begin{figure}
 \centering
@@ -154,7 +153,7 @@ The template-based mitigation of imaging systematics removes some of the true cl
 
 To calibrate for over-correction, we utilize our series of lognormal density fields with and without PNG, with and without systematic effects. The contamination model is based on the linear multivariate approach with the extinction, z-band depth, and r-band psfsize maps as input and parameters drawn from the likelihood constrained by the DR9 LRG sample. The idea is to simulate systematic effects that reflect spurious fluctuations as  realistic as the DR9 LRG sample. For correction, the neural network model is trained and applied to the simulations with various sets of imaging systematic maps as input. Particularly, we consider \textit{nonlinear three maps}, \textit{nonlinear four maps}, and \textit{nonlinear nine maps}. We fit both the mean power spectrum and each individual power spectrum of 1000 realizations. The best fit estimates from the mocks without systematics (and no mitigation applied) are considered as the true $\fnl$ values and the estimates from the mocks (with the mitigation procedure applied) are considered as the measured $\fnl$ values. Figure \ref{fig:fnlbias} shows the true $\fnl$ values vs the measured $\fnl$ values from fitting the mean power spectrum (solid lines) and individual spectra (points). The dashed lines show the best fit estimates from the contaminated realizations. The best fit estimates for the contaminated mocks before cleaning (\textit{no weight}) or per realizations are not shown for visual clarity. 
 
-Then, a pair of linear parameter are found to map the measured values to the true values, $f_{\rm NL, true} = m_{1} f_{\rm NL, measured} + m_{2}$. These $m_{1}$ and $m_{2}$ coefficients for the mean power spectrum are summarized in Table \ref{tab:debiasparams}. The coefficients for the \textit{nonlinear nine maps} approach are the highest, as more mitigation bias is expected if more imaging systematic maps are used. We find that $m_{1}-1$ determines the added uncertainty in the $\fnl$ constraints, once the correction coefficients are applied. We expect this effect to be maximum for \textit{nonlinear nine maps} and minimum for \textit{nonlinear three maps}.
+Then, a pair of linear parameters are found to map the measured values to the true values, $f_{\rm NL, true} = m_{1} f_{\rm NL, measured} + m_{2}$. These $m_{1}$ and $m_{2}$ coefficients for the mean power spectrum are summarized in Table \ref{tab:debiasparams}. The coefficients for the \textit{nonlinear nine maps} approach are the highest, as more mitigation bias is expected if more imaging systematic maps are used. We find that $m_{1}-1$ determines the added uncertainty in the $\fnl$ constraints, once the correction coefficients are applied. We expect this effect to be maximum for \textit{nonlinear nine maps} and minimum for \textit{nonlinear three maps}.
 
 \begin{table}
 \begin{center}
